<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.RegisterFragment">

    <ImageButton
        android:id="@+id/back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/round_icon"
        android:contentDescription="@string/back_to_login"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:padding="10dp"
        android:src="@drawable/arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/inner_register_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back_btn">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/inner_register_container" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/register_to_get_started"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="@id/inner_register_container"
            app:layout_constraintStart_toStartOf="@id/inner_register_container"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            tools:layout_editor_absoluteX="16dp" />

        <EditText
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:autofillHints="username"
            android:background="@drawable/edt_fields"
            android:hint="Enter your name"
            android:inputType="text"
            android:minHeight="50dp"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            app:layout_constraintEnd_toEndOf="@id/inner_register_container"
            app:layout_constraintStart_toStartOf="@id/inner_register_container"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <EditText
            android:id="@+id/email_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/edt_fields"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:minHeight="50dp"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/inner_register_container"
            app:layout_constraintEnd_toEndOf="@id/inner_register_container"
            app:layout_constraintTop_toBottomOf="@+id/user_name" />

        <EditText
            android:id="@+id/contact_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/edt_fields"
            android:hint="Contact No."
            android:inputType="textEmailAddress"
            android:minHeight="50dp"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/inner_register_container"
            app:layout_constraintEnd_toEndOf="@id/inner_register_container"
            app:layout_constraintTop_toBottomOf="@+id/email_id" />


        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/edt_fields"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:minHeight="50dp"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            app:layout_constraintStart_toStartOf="@id/inner_register_container"
            app:layout_constraintEnd_toEndOf="@id/inner_register_container"
            app:layout_constraintTop_toBottomOf="@+id/contact_no" />

        <EditText
            android:id="@+id/cnf_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/edt_fields"
            android:hint="@string/confirm_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:minHeight="50dp"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            app:layout_constraintStart_toStartOf="@id/inner_register_container"
            app:layout_constraintEnd_toEndOf="@id/inner_register_container"
            app:layout_constraintTop_toBottomOf="@+id/password" />

        <Button
            android:id="@+id/register_btn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:background="@drawable/btn_fields"
            android:ems="25"
            android:text="@string/register"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/cnf_password"
            app:layout_constraintStart_toStartOf="@+id/cnf_password"
            app:layout_constraintTop_toBottomOf="@+id/cnf_password" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="28dp"
            android:layout_marginTop="28dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="2"
            app:layout_constraintTop_toBottomOf="@id/register_btn"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintStart_toStartOf="@id/inner_register_container"
            app:layout_constraintEnd_toEndOf="@id/inner_register_container"
            app:layout_constraintHorizontal_bias="1.0"
            >


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="17dp"
                android:layout_weight="1"
                android:background="@color/grey" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:text="@string/or_register_with"
                android:textAlignment="center"
                android:textStyle="italic" />


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginEnd="17dp"
                android:layout_weight="1"
                android:background="@color/grey" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
            app:layout_constraintStart_toStartOf="@id/inner_register_container"
            app:layout_constraintEnd_toEndOf="@id/inner_register_container">

            <ImageButton
                android:id="@+id/facebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:contentDescription="@string/facebook_register"
                android:src="@drawable/facebook" />

            <ImageButton
                android:id="@+id/google"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:background="@color/white"
                android:contentDescription="@string/google_register"
                android:src="@drawable/google" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="84dp"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/inner_register_container"
            app:layout_constraintEnd_toEndOf="@id/inner_register_container">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account" />

            <TextView
                android:id="@+id/sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:text="@string/login_now"
                android:textAlignment="textEnd"
                android:textColor="@color/teal_200"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>